# mdbook-xmldoc

./: .gitignore  Cargo.toml  README.MD
src/: generator.rs  main.rs  model.rs  schema.rs
