[package]
name = "mdbook-xmldoc"
version = "0.1.0"
authors = ["Alex Sobolev <code.sobolev@gmail.com>"]
description = "An mdBook preprocessor for embedding (awfully) simplistic XML documentation."
license = "MPL-2.0"
homepage = "https://github.com/alexobolev/mdbook-xmldoc"
repository = "https://github.com/alexobolev/mdbook-xmldoc"
edition = "2021"

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive"] }
compact_str = { version = "0.6.1", features = ["serde"] }
fern = { version = "0.6.1", features = ["colored"] }
log = "0.4.17"
mdbook = "0.4.27"
pulldown-cmark = { version = "0.9.2", features = ["simd"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
smallvec = { version = "1.10.0", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
